Version 6.8.8 - not yet released
* data files
  - support "GSEC" in OpenAir files
* weather
  - update source URLs for METARs and TAFs
* devices
  - CAI302: fix waypoint download (#3830)
  - LX: fix Nano 3 task declaration (#3858)
* Kobo
  - support for Kobo Aura Edition 2
  - support for Kobo Glo Refurbished
  - fix Wi-Fi on recent Kobo firmware releases (#3850)
  - fix USB storage compatibility with Windows 10
* Raspberry Pi
  - fix Raspbian Stretch compatibility
* Raspberry Pi / Cubieboard
  - fix for freeze on shutdown (#3679)

Version 6.8.7 - 2016/08/12
* data files
  - fix freeze after loading malformed topography file
* tracking
  - SkyLines: fix SkyLines tracking on non-Android
  - SkyLines: fix two buffer overflow bugs
  - new client for the experimental "XCSoar Cloud"
* Android
  - remove the deprecated crash dumper

Version 6.8.6 - 2016/07/22
* calculations
  - show takeoff time after landing (#3786)
* user interface
  - fix graphics error on FLARM gauge
  - fix crash in waypoint label renderer (#3781)
  - fix several crashes in waypoint editor (#3553, #3784)
  - fix crash in task manager
  - use task speed unit for OLC speed InfoBox (#3785)
* devices
  - EW: use first 6 characters of turn point names (was: 3)
  - EW: fix broken umlauts in turn point names
  - LX: fix Nano 3 firmware 2.0 compatibility (#3764)
* settings
  - adjust range and step size of terrain/arrival safety height settings
* map
  - increase upper limit of the number of waypoint labels displayed
* Android
  - fix crash due to Bluetooth LE connect failure
* Kobo
  - support USB-OTG for Kobo Glo HD and Kobo Touch 2.0

Version 6.8.5 - 2016/06/12
* calculations
  - update circling percentage only when flying
  - fix circling height gain calculation
* user interface
  - fix "kg/m^2" and "lb/ft^2" unit display
  - fix inverse colors in horizon page
  - reduce CPU load of some InfoBoxes (#3757)
* calculations
  - add option to disable external wind (#3693, #3773)
* devices